Bug fix: home hero buttons not working due to negative z-index

--- a/wp-content/themes/edima/sass/components/_buttons.scss
+++ b/wp-content/themes/edima/sass/components/_buttons.scss
@@ -103,6 +103,7 @@
 }
 
 .button-group {
+  z-index:1;
   .button:not(:last-of-type) {
     margin-right:0.5rem;
   }
