--- a/wp-content/themes/edima/sass/pages/_home.scss
+++ b/wp-content/themes/edima/sass/pages/_home.scss
@@ -1,6 +1,5 @@
 .home-hero {
   position: relative;
-  z-index: -1;
   width:100vw;
   /*margin-left:-25vw;*/
   height:calc(100vh - 8rem);
